--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">ComponentB</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+	<string name="libB">LIBBSTRING!</string>
 </resources>
